fixed spacing between left arrow and elements

--- a/client/src/SCSS/components/MyProfile/ProfileParks/favorites/favoriteparks.scss
+++ b/client/src/SCSS/components/MyProfile/ProfileParks/favorites/favoriteparks.scss
@@ -28,18 +28,19 @@
 
         .cardContainer0 {
             @extend .cardContainer;
+            margin-left: 0%;
         }
         .cardContainer1 {
             @extend .cardContainer;
-            left: 20vw;
+            left: 17vw;
         }
         .cardContainer2 {
             @extend .cardContainer;
-            left: 40vw;
+            left: 36vw;
         }
         .cardContainer3 {
             @extend .cardContainer;
-            left: 60vw;
+            left: 55vw;
         }
 
     }
